# scale

./: .gitignore  CLAUDE.md  DEVLOG.md  LICENSE  NOTICE  README.md  REBASE.md.example  REVIEW.md  REVIEW.md.example  SPEC.md  WORKFLOW.md  WORKFLOW.md.example  pyproject.toml
docs/: IMPLEMENTATION.md  VISION.md
scale/: clean.py  main.py
scale/agent/: claude.py  stall.py
scale/api/: routes.py  server.py
scale/config/: loader.py  schema.py  watcher.py
scale/dashboard/: ui.py
scale/init/: prompt.py  runner.py
scale/logs/: reader.py
scale/orchestrator/: core.py  dispatch.py  state.py
scale/planner/: agent.py  runner.py
scale/prompt/: renderer.py
scale/scm/: base.py
scale/tracker/: base.py  github.py  models.py
scale/triage/: agent.py  runner.py
scale/worker/: base.py  feedback.py  local.py  rebase.py  review.py  ssh.py
scale/workspace/: manager.py
scripts/: analyze_agent_logs.py
symphony/: main.py
symphony/agent/: claude.py
symphony/api/: routes.py  server.py
symphony/config/: loader.py  schema.py  watcher.py
symphony/dashboard/: ui.py
symphony/orchestrator/: core.py  dispatch.py  state.py
tests/: test_agent.py  test_api.py  test_clean.py  test_config.py  test_dashboard.py  test_dispatch.py  test_feedback.py  test_init.py  test_logs.py  test_main.py  test_orchestrator.py  test_planner_agent.py  test_planner_runner.py  test_prompt.py  test_rebase_worker.py  test_review.py  test_stall.py  test_tracker.py  test_triage_agent.py  test_triage_runner.py  test_watcher.py  test_worker.py  test_workflow_prompt.py  test_workspace.py
(+17 files in other folders)
